# haskell-todo

./: .ghci  .gitignore  LICENSE  README.md  ghci.sh  package.yaml  servant-test.cabal  stack.yaml  test.db
app/: Main.hs
resources/: config.json  test.key
resources/test/: malformed.json  partial_config.json
src/: ApiType.hs  HaskellTodo.hs  Lib.hs  ServantTest.hs  Server.hs
src/ApiType/: User.hs
src/Common/: Auth.hs  Config.hs  HasField.hs
src/Common/Auth/: HttpApi.hs  JWTContext.hs  Logic.hs  Types.hs
src/Common/Config/: Loader.hs  Server.hs  Types.hs
src/Common/Control/: Util.hs
src/Common/Crypto/: BCrypt.hs  Hasher.hs
src/Common/Db/: SQLite.hs  Transactor.hs
src/Common/Effect/: JWT.hs
src/Common/HasVal/: Class.hs
src/Common/Util/: AesonHelpers.hs  ServantHelpers.hs
src/Common/Version/: Class.hs  Server.hs  Types.hs
src/FETodo/: Scratch.hs
src/HaskellTodo/: Config.hs  Env.hs  HttpApi.hs  WarpServer.hs
src/HaskellTodo/Adapters/: Item.hs  User.hs
src/HaskellTodo/Auth/: Adapters.hs  HttpApi.hs  Logic.hs  Types.hs
src/HaskellTodo/Controllers/: Item.hs  User.hs
src/HaskellTodo/Db/: Item.hs  User.hs
src/HaskellTodo/HttpApi/: Item.hs  Static.hs  User.hs
src/HaskellTodo/Models/: Item.hs  User.hs
src/HaskellTodo/WireTypes/: Item.hs  User.hs
src/ServantTest/: Config.hs  Env.hs  HttpApi.hs  Lib.hs  Sqlite.hs
src/Server/: User.hs
src/Version/: Class.hs  Server.hs
static/: index.html
test/: Spec.hs  VersionSpec.hs
test/Common/: VersionSpec.hs
test/HaskellTodo/: HttpApiSpec.hs
test/ServantTest/: HttpApiSpec.hs
(+52 files in other folders)
